unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Decision_Maker_Phone__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Phone__c</fullName>
    <formula>Decision_Maker_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Maker Phone</label>
    <type>Text</type>
</CustomField>