unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Decision_Maker_Title__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Title__c</fullName>
    <formula>Decision_Maker_Contact__r.Title</formula>
    <label>Decision Maker Title</label>
    <type>Text</type>
</CustomField>