unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Deductions_Loaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Deductions_Loaded_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deductions Loaded Date</label>
    <type>Date</type>
</CustomField>