unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Dental__c.field-meta.xml
<CustomField>
    <fullName>Dental__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental</label>
    <length>255</length>
    <type>Text</type>
</CustomField>