unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Dental_Post_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Dental_Post_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dental Post Enrollment</label>
    <type>Checkbox</type>
</CustomField>