unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Dental_Post_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Dental_Post_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental Post Enrollment Date</label>
    <type>Date</type>
</CustomField>