unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Dependent_Care_Max__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Care_Max__c</fullName>
    <label>Dependent Care Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>