unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Disability_Type__c.field-meta.xml
<CustomField>
    <fullName>Disability_Type__c</fullName>
    <label>Disability Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ED LTD1</fullName>
            </value>
            <value>
                <fullName>ED LTD2</fullName>
            </value>
            <value>
                <fullName>ED LTD3-1/4</fullName>
            </value>
            <value>
                <fullName>ED LTD3-1515</fullName>
            </value>
            <value>
                <fullName>ED LTD3-3030</fullName>
            </value>
            <value>
                <fullName>ED LTD3-6060</fullName>
            </value>
            <value>
                <fullName>ED LTD3-88</fullName>
            </value>
            <value>
                <fullName>ED LTD4</fullName>
            </value>
            <value>
                <fullName>LTD</fullName>
            </value>
            <value>
                <fullName>LTD6 1/4</fullName>
            </value>
            <value>
                <fullName>LTD6 15/15</fullName>
            </value>
            <value>
                <fullName>LTD6 30/30</fullName>
            </value>
            <value>
                <fullName>LTD6 60/60</fullName>
            </value>
            <value>
                <fullName>LTD6 8/8</fullName>
            </value>
            <value>
                <fullName>LTD6 90/90</fullName>
            </value>
            <value>
                <fullName>LTD ER PD</fullName>
            </value>
            <value>
                <fullName>STD</fullName>
            </value>
            <value>
                <fullName>STD ER PD</fullName>
            </value>
            <value>
                <fullName>VLTD</fullName>
            </value>
            <value>
                <fullName>VSTD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>