unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Domicile_State__c.field-meta.xml
<CustomField>
    <fullName>Domicile_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Domicile State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>