unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Dropped_Images__c.field-meta.xml
<CustomField>
    <fullName>Dropped_Images__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dropped Images</label>
    <type>Checkbox</type>
</CustomField>