unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Dropped_Images_Date__c.field-meta.xml
<CustomField>
    <fullName>Dropped_Images_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dropped Images Date</label>
    <type>Date</type>
</CustomField>