unpackaged/main/default/objects/Enrollment_Implementation__c/fields/DUO__c.field-meta.xml
<CustomField>
    <fullName>DUO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Help with Tracking for the Alabama duo launch and management of enrollment cases.</description>
    <label>DUO</label>
    <type>Checkbox</type>
</CustomField>