unpackaged/main/default/objects/Enrollment_Implementation__c/fields/ECR_Commissions_Heaped_Level__c.field-meta.xml
<CustomField>
    <fullName>ECR_Commissions_Heaped_Level__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <label>ECR Commissions (Heaped/Level)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heaped</fullName>
            </value>
            <value>
                <fullName>Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>