unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Election_Form_Delivery_For_Employees__c.field-meta.xml
<CustomField>
    <fullName>Election_Form_Delivery_For_Employees__c</fullName>
    <label>Election Form Delivery For Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Print in Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>