unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Election_Form_Delivery_For_Group__c.field-meta.xml
<CustomField>
    <fullName>Election_Form_Delivery_For_Group__c</fullName>
    <label>Election Form Delivery For Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deliver as PDF&quot;S</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Print in Field</fullName>
            </value>
            <value>
                <fullName>Print in Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>