unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Election_Form_Provided__c.field-meta.xml
<CustomField>
    <fullName>Election_Form_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Election Form Provided</label>
    <type>Checkbox</type>
</CustomField>