unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Enroller_Signoff_TSM_Notify_ES__c.field-meta.xml
<CustomField>
    <fullName>Enroller_Signoff_TSM_Notify_ES__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enrollers sign off to TSM, TSM notifys ES case is complete and images can be sent</inlineHelpText>
    <label>Enroller Signoff/TSM Notify ES</label>
    <type>Checkbox</type>
</CustomField>