unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Enrollers__c.field-meta.xml
<CustomField>
    <fullName>Enrollers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>