unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Enrollers_Login__c.field-meta.xml
<CustomField>
    <fullName>Enrollers_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ensure all enrollers have log ins for any systems they are to use (other carriers etc.)</inlineHelpText>
    <label>Enrollers Login</label>
    <type>Checkbox</type>
</CustomField>