unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Enrollment_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Signed enrollment agreement by all parties on file</inlineHelpText>
    <label>Enrollment Agreement</label>
    <type>Checkbox</type>
</CustomField>