unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Enrollment_Call_In_Number__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Call_In_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Get and provide phone number for enrollment if applicable</inlineHelpText>
    <label>Enrollment Call In Number</label>
    <type>Phone</type>
</CustomField>