unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Enrollment_Driver__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Driver__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the mandatory driver of the enrollment?</inlineHelpText>
    <label>Enrollment Driver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>