unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Enrollment_Implementation_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Implementation_Status__c</fullName>
    <description>Enrollment Implementation Status</description>
    <formula>TEXT(Case__r.Enrollment_Implementation_Status__c)</formula>
    <label>Enrollment Implementation Status</label>
    <type>Text</type>
</CustomField>