unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Enrollment_Method__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Method__c</fullName>
    <label>Enrollment Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Onsite Enrollers</fullName>
            </value>
            <value>
                <fullName>Pre Pop Apps</fullName>
            </value>
            <value>
                <fullName>Self Enrollment</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>