unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Enrollment_Plan_Notes_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Plan_Notes_Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Instructions related to  GI info, product instructions/limitations, special eligibility, takeover, approvals/exceptions, other enrollment systems, group specific notes, election forms, LOA, competitor information, etc...</inlineHelpText>
    <label>Enrollment Plan Notes/Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>