unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Enrollment_Setup_Contact__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Setup_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Setup Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollment Implementations (Enrollment Setup Contact)</relationshipLabel>
    <relationshipName>Enrollment_Implementations2</relationshipName>
    <type>Lookup</type>
</CustomField>