unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Enrollment_Setup_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Setup_Contact_Email__c</fullName>
    <formula>Enrollment_Setup_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Setup Contact Email</label>
    <type>Text</type>
</CustomField>