unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Enrollment_Setup_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Setup_Contact_Fax__c</fullName>
    <formula>Enrollment_Setup_Contact__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Setup Contact Fax#</label>
    <type>Text</type>
</CustomField>