unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Enrollment_Setup_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Setup_Contact_Phone__c</fullName>
    <formula>Enrollment_Setup_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Setup Contact Phone</label>
    <type>Text</type>
</CustomField>