unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Enrollment_Setup_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Setup_Contact_Title__c</fullName>
    <formula>Enrollment_Setup_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Setup Contact Title</label>
    <type>Text</type>
</CustomField>