unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Enrollment_State__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_State__c</fullName>
    <label>Enrollment State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>