unpackaged/main/default/objects/Enrollment_Implementation__c/fields/External_Testing_Released__c.field-meta.xml
<CustomField>
    <fullName>External_Testing_Released__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Testing Released</label>
    <type>Checkbox</type>
</CustomField>