unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Fact_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Fact_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fact Sheet</label>
    <type>Checkbox</type>
</CustomField>