unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Fact_Sheet_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Fact_Sheet_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fact Sheet Received_Date</label>
    <type>Date</type>
</CustomField>