unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Final_Production_Provided__c.field-meta.xml
<CustomField>
    <fullName>Final_Production_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Final production provided to internal, agency, broker etc.</inlineHelpText>
    <label>Final Production Provided</label>
    <type>Checkbox</type>
</CustomField>