unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Final_Production_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Final_Production_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Final production reporting recorded/sent to PCCR</inlineHelpText>
    <label>Final Production Reporting</label>
    <type>Checkbox</type>
</CustomField>