unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Final_Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Final_Reviewer_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Reviewer Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>