unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Final_Reviewer_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Reviewer_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Reviewer Completion Date</label>
    <type>Date</type>
</CustomField>