unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Final_Reviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Final_Reviewer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Reviewer Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enrollment_Implementations3</relationshipName>
    <type>Lookup</type>
</CustomField>