unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Financial_Tool__c.field-meta.xml
<CustomField>
    <fullName>Financial_Tool__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Analyze group with Financial Tool and saved, discuss conditions with group/broker/blue agency and see agreement for conditions required.</inlineHelpText>
    <label>Financial Tool</label>
    <type>Checkbox</type>
</CustomField>