unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Flex_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Flex_Administrator__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flex Administrator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>