unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Flex_Daycare_Renewal_ID__c.field-meta.xml
<CustomField>
    <fullName>Flex_Daycare_Renewal_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flex Daycare Renewal ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>