unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Follow_Up_Enrollment_Call__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Enrollment_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up Enrollment Call</label>
    <type>Checkbox</type>
</CustomField>