unpackaged/main/default/objects/Enrollment_Implementation__c/fields/General_Agency_Agent__c.field-meta.xml
<CustomField>
    <fullName>General_Agency_Agent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>General Agency/Agent</label>
    <length>200</length>
    <type>Text</type>
</CustomField>