unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Grace_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Grace_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grace End Date</label>
    <type>Date</type>
</CustomField>