unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>Reflects group name from case</description>
    <formula>Case__r.Master_Group__r.Name</formula>
    <inlineHelpText>This field is a formula (read only) field that reflect the master group field from the case</inlineHelpText>
    <label>Group Name</label>
    <type>Text</type>
</CustomField>