unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Guidelines_Met__c.field-meta.xml
<CustomField>
    <fullName>Guidelines_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guidelines Met</label>
    <type>Checkbox</type>
</CustomField>