unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Health__c.field-meta.xml
<CustomField>
    <fullName>Health__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Health</label>
    <length>255</length>
    <type>Text</type>
</CustomField>