unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Health_Post_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Health_Post_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Post Enrollment</label>
    <type>Checkbox</type>
</CustomField>