unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Health_Post_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Health_Post_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Health Post Enrollment Date</label>
    <type>Date</type>
</CustomField>