unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Hospital_Type__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Type__c</fullName>
    <label>Hospital Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DUO</fullName>
            </value>
            <value>
                <fullName>Hospital Confinement</fullName>
            </value>
            <value>
                <fullName>W2G Hospital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>