unpackaged/main/default/objects/Enrollment_Implementation__c/fields/HR_Contact__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollment Implementations (HR Contact)</relationshipLabel>
    <relationshipName>Enrollment_Implementations7</relationshipName>
    <type>Lookup</type>
</CustomField>