unpackaged/main/default/objects/Enrollment_Implementation__c/fields/HR_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact_Email__c</fullName>
    <formula>HR_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HR Contact Email</label>
    <type>Text</type>
</CustomField>