unpackaged/main/default/objects/Enrollment_Implementation__c/fields/HR_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact_Fax__c</fullName>
    <formula>HR_Contact__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HR Contact Fax</label>
    <type>Text</type>
</CustomField>