unpackaged/main/default/objects/Enrollment_Implementation__c/fields/HR_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact_Phone__c</fullName>
    <formula>HR_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HR Contact Phone</label>
    <type>Text</type>
</CustomField>