unpackaged/main/default/objects/Enrollment_Implementation__c/fields/HR_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact_Title__c</fullName>
    <formula>HR_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HR Contact Title</label>
    <type>Text</type>
</CustomField>