unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Individual_AOR_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Individual_AOR_Letter_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Individual AOR Letter Sent</label>
    <type>Date</type>
</CustomField>