unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Individual_AOR_Letters__c.field-meta.xml
<CustomField>
    <fullName>Individual_AOR_Letters__c</fullName>
    <label>Individual AOR Letters</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>