unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Invoice_of_Cost__c.field-meta.xml
<CustomField>
    <fullName>Invoice_of_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Provide invoice of costs to sales rep for discussion with broker</inlineHelpText>
    <label>Invoice of Cost</label>
    <type>Checkbox</type>
</CustomField>