unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Invoice_to_Group__c.field-meta.xml
<CustomField>
    <fullName>Invoice_to_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice to Group</label>
    <type>Checkbox</type>
</CustomField>