unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Lead_Enrolling_Rep__c.field-meta.xml
<CustomField>
    <fullName>Lead_Enrolling_Rep__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Enrolling Rep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>