unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Life_Type__c.field-meta.xml
<CustomField>
    <fullName>Life_Type__c</fullName>
    <label>Life Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADD</fullName>
            </value>
            <value>
                <fullName>Group Term Life</fullName>
            </value>
            <value>
                <fullName>Supp ADD</fullName>
            </value>
            <value>
                <fullName>Supp Life</fullName>
            </value>
            <value>
                <fullName>Term Life</fullName>
            </value>
            <value>
                <fullName>VADD</fullName>
            </value>
            <value>
                <fullName>VGTL</fullName>
            </value>
            <value>
                <fullName>VGTL w/ ADD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>