unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Location_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Location_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Schedule</label>
    <type>Checkbox</type>
</CustomField>