unpackaged/main/default/objects/Enrollment_Implementation__c/fields/LSV_Enrollers__c.field-meta.xml
<CustomField>
    <fullName>LSV_Enrollers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LSV Enrollers</label>
    <type>Checkbox</type>
</CustomField>