unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Manager_Audit__c.field-meta.xml
<CustomField>
    <fullName>Manager_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Audit</label>
    <type>Checkbox</type>
</CustomField>