unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Manager_Audit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Manager_Audit_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager Audit Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>