unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Manager_Audit_Corrections_Requested__c.field-meta.xml
<CustomField>
    <fullName>Manager_Audit_Corrections_Requested__c</fullName>
    <label>Manager Audit Corrections Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>