unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Manager_Auditor__c.field-meta.xml
<CustomField>
    <fullName>Manager_Auditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Auditor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enrollment_Implementations2</relationshipName>
    <type>Lookup</type>
</CustomField>